--- a/src/components/layout/HrHeroBanner.module.css
+++ b/src/components/layout/HrHeroBanner.module.css
@@ -4,6 +4,7 @@
     height: 95vh;
     margin-bottom: 0;
     overflow: hidden;
+    padding-top: 80px;
 }
 
 /* Цветной прямоугольник с анимацией */
