адаптив баннера лендинга + мелочи

--- a/src/components/layout/BannerAI.module.css
+++ b/src/components/layout/BannerAI.module.css
@@ -70,9 +70,9 @@
 }
 
 /* зеркалим правую сторону */
-.wave-side.right {
+/*.wave-side.right {
     transform: scaleX(-1);
-}
+}*/
 
 /* ===== Animation ===== */
 
