--- a/src/components/chatPage/MessageInput.module.css
+++ b/src/components/chatPage/MessageInput.module.css
@@ -3,24 +3,24 @@
     align-items: center;
     gap: 10px;
     padding: 10px;
-    border-top: 1px solid var(--color-accent-light);
-    background-color: #e8ebff;
+    border-top: 1px solid var(--cloud);
+    background-color: var(--lavand);
 }
 
 .message-input-field {
     flex-grow: 1;
-    border: 1px solid var(--color-accent-light);
+    border: 1px solid var(--cloud);
     padding: 12px;
     font-size: var(--font-size-base);
     background-color: var(--color-background);
     border-radius: 20px;
     outline: none;
     transition: all 0.2s;
-    color: var(--navy);
+    color: var(--color-primary-blue);
 }
 
 .message-input-field:focus {
-    background-color: var(--color-background);
+    background-color: white;
     border-color: var(--lavand);
 }
 
@@ -32,12 +32,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--lavand);
+    color: var(--navy);
     transition: color 0.2s ease;
 }
 
 .icon-button:hover:not(:disabled) {
-    color: var(--color-primary);
+    color: var(--color-primary-blue);
 }
 
 .icon-button:disabled {
@@ -46,9 +46,9 @@
 }
 
 .send-button {
-    color: var(--navy);
+    color: var(--color-primary-blue);
 }
 
 .send-button:hover:not(:disabled) {
-    color: var(--color-primary);
+    color: var(--color-primary-blue);
 }
