--- a/src/components/landingPage/FaqSection.module.css
+++ b/src/components/landingPage/FaqSection.module.css
@@ -26,7 +26,7 @@
 
 .faqTitle {
     text-align: center;
-    color: var(--navy);
+    color: var(--color-primary-blue);
     font-size: 30px;
     font-family: 'Anek Tamil', sans-serif;
     font-weight: 700;
