--- a/src/components/layout/Header.module.css
+++ b/src/components/layout/Header.module.css
@@ -3,17 +3,15 @@
    ============================================ */
 
 .header {
-  width: 100vw;
+  width: 100%;
   height: 99px;
   position: relative;
 }
 
 .headerContainer {
   width: 100vw;
-  height: 80px;
-  padding: 10px 60px;
-  left: 0;
-  top: 0;
+  height: var(--header-height);
+  padding: 10px 0;
   position: absolute;
   background: var(--lavand);
   overflow: hidden;
@@ -21,10 +19,11 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  display: flex;
 }
 
 .headerContent {
+  width: max(80%, 820px);
+  margin: 0 auto;
   align-self: stretch;
   justify-content: space-between;
   align-items: center;
@@ -50,7 +49,7 @@
 }
 
 .navLink {
-  color: var(--navy);
+  color: var(--color-primary-blue);
   font-size: 15px;
   font-family: 'Geist Mono', monospace;
   font-weight: 400;
@@ -139,7 +138,7 @@
   left: 0;
   width: 100vw;
   z-index: 999;
-  height: 80px;
+  height: var(--header-height);
 
   /* Чтобы GSAP-transform работал красиво */
   will-change: transform, opacity;
@@ -179,7 +178,7 @@
     right: 0;
     width: 280px;
     height: 100vh;
-    background: var(--lavand) !important;
+    background: var(--lavand);
     box-shadow: -4px 0 20px rgba(0, 0, 0, 0.4);
 
     /* выезжает справа */
@@ -209,7 +208,7 @@
   .mobileLoginButton {
     margin-top: 10px;
     padding: 12px;
-    background: #95525b;
+    background: var(--maroon);
     color: #fff;
     border-radius: 8px;
     border: none;
@@ -221,7 +220,7 @@
   .mobileMenuContent nav,
   .mobileMenuContent div {
     display: flex;
-    flex-direction: column !important;
+    flex-direction: column;
     gap: 14px;
   }
 }
