--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -23,7 +23,7 @@
 .buttonPrimary:active { opacity: 0.8; }
 
 .buttonSecondary {
-  background: var(--color-secondary);
+  background: var(--cloud);
   border: 1px var(--lavand) solid;
 }
 
@@ -33,7 +33,7 @@
 }
 
 .buttonText {
-  /*color: var(--color-text-light);*/
+  /*color: var(--color-primary-light);*/
   font-size: var(--font-size-lg);
   font-family: var(--font-family-mono), sans-serif;
   font-weight: 500;
@@ -43,7 +43,7 @@
 }
 
 .buttonSecondary .buttonText {
-  color: var(--navy);
+  color: var(--color-primary-blue);
 }
 
 @media (max-width: 420px) {
