--- a/src/components/ui/FeatureCard/FeatureCard.module.css
+++ b/src/components/ui/FeatureCard/FeatureCard.module.css
@@ -17,7 +17,7 @@
 
 .featureTitle {
   width: 350px;
-  color: black;
+  color: var(--color-primary-blue);
   font-size: 25px;
   font-family: 'Anek Tamil', sans-serif;
   font-weight: 700;
@@ -29,7 +29,7 @@
 .featureDescription {
   width: 100%;
   max-width: 500px;
-  color: black;
+  color: var(--color-primary-blue);
   font-size: 17px;
   font-family: 'Geist', sans-serif;
   font-weight: 400;
