--- a/src/pages/common/ChatPage.module.css
+++ b/src/pages/common/ChatPage.module.css
@@ -2,7 +2,7 @@
     display: flex;
     height: 90vh;
     max-width: 1200px;
-    margin: calc(80px + 2rem) auto;
+    margin: calc(var(--header-height) + 2rem) auto;
     border-radius: 12px;
     background-color: var(--color-background);
     box-shadow: 0 4px 12px rgba(8, 32, 96, 0.15);
@@ -17,6 +17,7 @@
 }
 
 .chat-header {
+    height: 90px;
     padding: 1rem 1.5rem;
     border-bottom: 1px solid var(--lavand);
     background-color: var(--lavand);
@@ -28,18 +29,19 @@
     border: none;
     font-size: 22px;
     cursor: pointer;
-    color: var(--navy);
+    color: var(--color-primary-blue);
 }
 
 
 .chat-header h1 {
-    font-size: var(--font-size-xl);
+    font-size: var(--font-size-lg);
     margin: 0 0 0.25rem;
-    color: var(--navy);
+    color: var(--color-primary-blue);
 }
 
 .chat-header .status {
-    color: var(--navy);
+    font-size: var(--font-size-sm);
+    color: var(--color-primary-blue);
     font-weight: 400;
     margin: 0;
 }
@@ -51,12 +53,12 @@
     display: flex;
     flex-direction: column;
     gap: 1.25rem;
-    background-color: white;
+    background-color: var(--color-background);
 }
 
 .chat-footer {
     width: 100%;
-    border-top: 1px solid var(--color-border-light);
+    border-top: 1px solid var(--cloud);
 }
 
 .no-chat-selected {
@@ -72,11 +74,11 @@
 }
 
 .messages-list::-webkit-scrollbar-track {
-    background: var(--color-secondary);
+    background: var(--cloud);
 }
 
 .messages-list::-webkit-scrollbar-thumb {
-    background: var(--color-border-light);
+    background: var(--peach);
     border-radius: 4px;
 }
 
@@ -90,7 +92,7 @@
     justify-content: center;
     height: 100%;
     font-size: var(--font-size-lg);
-    color: var(--color-accent);
+    color: var(--lavand);
 }
 
 .centered-status-error {
