--- a/src/pages/common/LandingPage.module.css
+++ b/src/pages/common/LandingPage.module.css
@@ -32,7 +32,7 @@
   top: 0;
   position: absolute;
   text-align: center;
-  color: var(--navy);
+  color: var(--color-primary-blue);
   font-size: 45px;
   font-family: 'Anek Tamil', sans-serif;
   font-weight: 700;
