--- a/src/components/ui/FormField/FormField.module.css
+++ b/src/components/ui/FormField/FormField.module.css
@@ -4,7 +4,7 @@
 }
 
 .fieldLabel {
-  color: var(--navy);
+  color: var(--maroon);
   padding-left: 4px;
   font-size: 13px;
   font-family: var(--font-family-sans), sans-serif;
